# teradata-assignment

./: .gitignore  README.md  docker-compose.yml
be/: .env.example  dockerfile  pyproject.toml
be/app/: agent.py  main.py  vector_store.py
fe/: .env.example  dockerfile  next.config.ts  package.json  pnpm-lock.yaml
fe/app/: layout.tsx  page.tsx
fe/app/api/chat/stream/: route.ts
fe/app/api/upload/: route.ts
fe/app/upload/: page.tsx
fe/components/: chat-input.tsx  chat-message.tsx  header.tsx
fe/components/ui/: markdown-content.tsx  sonner.tsx
fe/hooks/: use-chat.ts
