[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
]
